--- a/Code/AndroidManifest.xml
+++ b/Code/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
 
         <activity
-            android:launchMode="singleTop"
+            android:launchMode="singleTask"
             android:name=".MainActivity"
             android:label="@string/app_name" >
 
